@@ -113,6 +113,7 @@ export("+.section",
        mapArrows,
        mapContour,
        mapDirectionField,
+       mapGrid,
        mapImage,
        mapLines,
        mapLocator,
